name:                redish
version:             0.0.1
synopsis:            A simple, Redis-inspired, key-value store
license:             BSD3
license-file:        LICENSE
author:              Honza Pokorny
maintainer:          me@honza.ca
homepage:            https://github.com/honza/redish
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable redish
  main-is:           Main.hs
  build-depends:     base, stm, network, containers, mtl
  Ghc-Options:       -Wall -threaded -O2
