name:                redish
version:             0.1.0
synopsis:            A simple, Redis-inspired, key-value store
license:             BSD3
license-file:        LICENSE
author:              Honza Pokorny
maintainer:          me@honza.ca
homepage:            https://github.com/honza/redish
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable redish
  main-is:           Main.hs
  build-depends:     base, stm, network, containers, mtl, transformers
  Ghc-Options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  Gefault-language:  Haskell2010
